--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./fonts/fonts.css">   
+    <link rel="stylesheet" href="./fonts/fonts.css">    
     <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Сложно сосредоточиться</title>
     <script src="./scripts/script.js"></script>
@@ -39,8 +39,8 @@
           </li>
         </ul>
       </nav>
-      <h1>no focus</h1>
-      <p>Что делать, когда не можешь делать ничего Или почему нам так сложно сконцентрироваться,
+      <h1 class="header-title">no focus</h1>
+      <p class="header-paragraph">Что делать, когда не можешь делать ничего Или почему нам так сложно сконцентрироваться,
          особенно когда очень надо</p>
     </header>
 
