--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <link rel="stylesheet" href="./fonts/fonts.css">  
-    <link rel="stylesheet" href="./styles/globals.css"> 
-    <link rel="stylesheet" href="./styles/variables.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/dark.css">
-    <link rel="stylesheet" href="./styles/light.css">
-    <meta name="color-scheme" content="dark light">
+    <link rel="stylesheet" href="./fonts/fonts.css" >
+    <link rel="stylesheet" href="./styles/globals.css" >
+    <link rel="stylesheet" href="./styles/variables.css" >
+    <link rel="stylesheet" href="./styles/style.css" >
+    <link rel="stylesheet" href="./styles/dark.css" >
+    <link rel="stylesheet" href="./styles/light.css" >
+    <meta name="color-scheme" content="dark light" >
     <link rel="icon" href="./images/favicon.ico" >
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" >
     <link rel="apple-touch-icon" href="./images/mobile-icon.png" >
 
     <title>Сложно сосредоточиться</title>
@@ -24,24 +24,17 @@
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_light"
-            >
+            <button class="header__theme-menu-button header__theme-menu-button_type_light">
               День
             </button>
           </li>
           <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-              disabled
-            >
+            <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto" disabled>
               Авто
             </button>
           </li>
           <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_dark"
-            >
+            <button class="header__theme-menu-button header__theme-menu-button_type_dark">
               Неон
             </button>
           </li>
@@ -50,9 +43,8 @@
       <h1 class="title header-title">no focus</h1>
       <div class="header-decor">
         <p class="title-decor">
-          Что делать, когда не можешь делать ничего <br />
-          Или почему нам так сложно сконцентрироваться, особенно когда очень
-          надо
+          Что делать, когда не можешь делать ничего <br >
+          Или почему нам так сложно сконцентрироваться, особенно когда очень надо
         </p>
       </div>
     </header>
@@ -60,25 +52,24 @@
     <main class="main">
       <section class="main-section">
         <h2 class="section-title">Почему сосредоточиться так сложно</h2>
-        <ul class="article-list"></ul>
+        <ul class="article-list">
           <li class="article-list-item">
             <h3 class="title-decor">Многозадачность</h3>
-            <p class="article-paragraph">Особенно сложно сосредоточиться, когда задач много и все они — важные. 
-            Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? 
-            А дело в том, что её просто не существует. Исследователи
-            <a href="https://dana.org/article/multicosts-of-multitasking/" class="text-link" target="-black"/> выяснили</a>, что мозгу тяжело концентрироваться
-             даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм 
-             паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: 
-             ошибаемся и быстро устаём.</p>
+            <p class="article-paragraph">
+              Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
+              Исследователи
+              <a href="https://dana.org/article/multicosts-of-multitasking/" target="_blank" class="text-link">выяснили</a>
+              ,что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем
+              невнимательно: ошибаемся и быстро устаём.
+            </p>
           </li>
 
           <li class="article-list-item">
             <h3 class="title-decor">Дофамин</h3>
-            <p class="article-paragraph">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей 
-            невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в 
-            системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для 
-            мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. 
-            Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
+            <p class="article-paragraph">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы
+              часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
+              тем больше удовольствия получаешь.
             </p>
           </li>
         </ul>
@@ -89,83 +80,77 @@
         <ul class="article-list">
           <li class="article-list-item">
             <h3 class="title-decor">Многозадачность</h3>
-            <p class="article-paragraph">Как концентрация может снижаться из-за… концентрации? Любая стрессовая
-             ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет
-              опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца,
-               и она может не выдержать, если не давать ей отдохнуть.</p>
+            <p class="article-paragraph">
+              Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости
+              вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
+            </p>
           </li>
 
           <li class="article-list-item">
             <h3 class="title-decor">Еда</h3>
-            <p class="article-paragraph">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют
-             в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате 
-             попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и 
-             сонливость. И хотим ещё больше быстрых углеводов.</p>
+            <p class="article-paragraph">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как
+              только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
+            </p>
           </li>
 
           <li class="article-list-item">
             <h3 class="title-decor">Гаджеты</h3>
-            <p class="article-paragraph">Да-да, это та самая ситуация, когда на экране ноутбука — код, в 
-            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться
-             с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно
-              20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы 
-              вернуться к работе.</p>
-           </li>
-          </ul>
+            <p class="article-paragraph">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не
+              может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </li>
+        </ul>
       </section>
 
       <section class="main-section">
         <h2 class="section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="wrapper-section">
-          <h3 class="title-decor"> 
+          <h3 class="title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
           <ul class="article-list">
             <li class="article-list-item">
-              <h4 class="title-decor section-article-title">Представьте небо и облака
-              </h4>
-              <p class="article-paragraph">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
-                Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть
-                глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет 
-                где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о 
-                потенциальных проблемах из будущего.
+              <h4 class="title-decor section-article-title">Представьте небо и облака</h4>
+              <p class="article-paragraph">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
+                представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
+                волноваться о потенциальных проблемах из будущего.
               </p>
             </li>
 
             <li class="article-list-item">
-              <h4 class="title-decor section-article-title">Включите музыку
-              </h4>
-              <p class="article-paragraph">Но не любую, и не любимую. Любимая может быть связана с сильными положительными 
-                  эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить 
-                  плейлист c «белым шумом» или нейромузыкой.
+              <h4 class="title-decor section-article-title">Включите музыку</h4>
+              <p class="article-paragraph">
+                Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист c
+                «белым шумом» или нейромузыкой.
               </p>
             </li>
 
             <li class="article-list-item">
               <h4 class="title-decor section-article-title">Прогуляйтесь</h4>
-              <p class="article-paragraph">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-              <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-                  target="_blank"
-                  class="text-link"
-                  >показал</a>
-                   показал, что 
-                  созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно 
-                  совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать.
-                  Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+              <p class="article-paragraph">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank" class="text-link">показал</a>
+                показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё
+                больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+              </p>
             </li>
 
             <li class="article-list-item">
               <h4 class="title-decor section-article-title">Хорошо ешьте</h4>
-              <p class="article-paragraph" >Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые 
-                  препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые 
-                  (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+              <p class="article-paragraph">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис,
+                хлеб из цельнозерновой пшеницы.
+              </p>
             </li>
 
             <li class="article-list-item">
               <h4 class="title-decor section-article-title">Читайте</h4>
-              <p class="article-paragraph"></p>Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать 
-                  пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и 
-                  круто тренирует направленное внимание.
+              <p class="article-paragraph">
+                Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
+                направленное внимание.
               </p>
             </li>
           </ul>
@@ -173,15 +158,10 @@
       </section>
 
       <section class="section-gallery">
-        <h3 class="section-galery">А можно в картинках?</h3>
+        <h3 class="title-decor">А можно в картинках?</h3>
         <ul class="gallery-list">
           <li class="gallery-list-item">
-            <img 
-              class="gallery-item-image"
-              src="./images/sunset.png"
-              alt="Закат солнцана фоне моря и гор."
-              loading="lazy"
-            />
+            <img class="gallery-item-image" src="./images/sunset.png" alt="Закат солнцана фоне моря и гор." loading="lazy" >
           </li>
 
           <li class="gallery-list-item">
@@ -191,34 +171,19 @@
               alt="Миска с картинкой улыбки, наполненная мороженым, взбитыми сливками, 
                 фруктами и вставленным зонтикам."
               loading="lazy"
-            />
+            >
           </li>
 
           <li class="gallery-list-item">
-            <img 
-              class="gallery-item-image"
-              src="./images/tape.png"
-              alt="Музыкальная кассета."
-              loading="lazy"
-            />
+            <img class="gallery-item-image" src="./images/tape.png" alt="Музыкальная кассета." loading="lazy" >
           </li>
 
           <li class="gallery-list-item">
-            <img
-                class="gallery-item-image"
-                src="./images/books.png"
-                alt="Стопка книжек с розовой чашкой на верхней книжке."
-                loading="lazy"
-            />
+            <img class="gallery-item-image" src="./images/books.png" alt="Стопка книжек с розовой чашкой на верхней книжке." loading="lazy" >
           </li>
 
           <li class="gallery-list-item">
-              <img
-                class="gallery-item-image"
-                src="./images/street.png"
-                alt="Улица в Японии в фиолетовлм цвете."
-                loading="lazy"
-              />
+            <img class="gallery-item-image" src="./images/street.png" alt="Улица в Японии в фиолетовлм цвете." loading="lazy" >
           </li>
         </ul>
       </section>
